...
  static const String sda1961 = 'sda_1960';
  static const String hagerigna = 'hagerigna';
  static const String legacyHymnal = 'hymnal';

  static const HymnalVersion hymnal2004 = HymnalVersion(
    id: sdaNew,
    label: 'የ2004 ውዳሴ መዝሙር',
    shortLabel: '2004 ውዳሴ',
    briefLabel: '2004',
    isSda: true,
    hasCategories: true,
    fallbackDatabaseVersion: legacyHymnal,
    englishLabel: '2004 Wudase Hymnal',
    englishShortLabel: '2004 Wudase',
    englishBriefLabel: '2004',
  );

  static const HymnalVersion hymnal1975 = HymnalVersion(
    id: sdaOld,
    label: 'የ1975 ውዳሴ መዝሙር',
    shortLabel: '1975 ውዳሴ',
    briefLabel: '1975',
    isSda: true,
    hasCategories: true,
    fallbackDatabaseVersion: legacyHymnal,
    englishLabel: '1975 Wudase Hymnal',
...
